--- a/src/app/Gamestore/User/VideoJuegosHome/VideoJuegosHome.component.html
+++ b/src/app/Gamestore/User/VideoJuegosHome/VideoJuegosHome.component.html
@@ -63,14 +63,13 @@
                 <img class="portada" src="../../../../assets/PortadasVj/{{tile.img}}" style="
                 width: 70%;
                 height: 60%;
-                border: 1px solid black;
                 margin-top: 2%;
                 "    >
                 <br>
-                <div class="descrip" style="">
+                <div class="descrip" style="text-align: center;">
 
                     <p>{{tile.nombre}}</p>
-                    <br>
+                    
                    <p>{{tile.precio|euros}} </p>
                 </div>
                 
