--- a/src/app/Gamestore/User/index-user/index-user.component.css
+++ b/src/app/Gamestore/User/index-user/index-user.component.css
@@ -4,7 +4,10 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgb(255, 255, 255);
+  
+  background-size: cover;
+  background-position: center;
+  
   display: flex;
   flex-direction: column;
   
@@ -154,7 +157,7 @@ width: 100%;
 }
 
 .divCarrusel{
-  margin-top: 3%;;
+  margin-top: 2%;;
   margin-left: 9%; 
   width: 80%;
   height: 30%;
