--- a/src/app/Gamestore/User/video-consolas-home/detalle-videconsola/detalle-videconsola.component.html
+++ b/src/app/Gamestore/User/video-consolas-home/detalle-videconsola/detalle-videconsola.component.html
@@ -5,7 +5,7 @@
 <div class="figure">
     <div class="card" >
         <figure class="figura" >
-            <img class="portada" src="{{x.img}}" > 
+            <img class="portada" src="../../../../../assets/Consolas/{{x.img}}" > 
         </figure>
     </div>
 
