--- a/src/app/Gamestore/User/video-consolas-home/video-consolas-home.component.css
+++ b/src/app/Gamestore/User/video-consolas-home/video-consolas-home.component.css
@@ -32,18 +32,25 @@
 }
 
 .portada{
-    width: 100%;
-    height: 90%;
+    width: 70%;
+    height: 60%;
+    margin-top: 2%;
+    
 }
 
 .card{
     height: 90%;
-    width: 90%;
     display: flex;
     justify-content: center;
-    cursor: pointer;
-    border:  black;
+    border: 1px solid black;
     border-radius: 10px;
+    width: 90%;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    cursor: pointer;
+    border-radius: 10px;
+    word-wrap: break-word;
     
     
     
@@ -55,15 +62,9 @@
     
 }
 
-.figura{
-    justify-content: center;
-    
-    height: 90%;
-    width: 100%;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-}
+
 
 .descrip{
-    margin-left: 30%;
+    
+    text-align: center;
 }
