--- a/src/app/login/logueo/logueo.component.css
+++ b/src/app/login/logueo/logueo.component.css
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    
   }
   html,
   body {
@@ -9,6 +10,9 @@
     margin: 0;
     padding: 0;
   }
+  .login{
+    
+  }
   .custom-form {
     min-width: 300px;
     max-width: 23%;
@@ -17,8 +21,8 @@
     padding: 2rem 3rem;
     margin: auto;
     border-radius: 2.5rem;
-    background-color: rgb(144, 39, 39);
-    box-shadow: 13px 13px 20px #cbced1, -13px -13px 20px #ffffff;
+    background-color: rgb(103, 78, 131);
+    
     color: black;
     margin-top: 10rem;
     text-align: center;
