--- a/src/app/Gamestore/User/index-user/index-user.component.html
+++ b/src/app/Gamestore/User/index-user/index-user.component.html
@@ -52,7 +52,7 @@
           <!-- Div de los menu de botones -->
         <div class="divbuttonmenu">
         <button mat-button [matMenuTriggerFor]="vjmenu" #matMenuTrigger="matMenuTrigger"  
-        (mouseenter)="matMenuTrigger.openMenu()"  
+        (mouseenter)="matMenuTrigger.openMenu()" >
           <mat-icon style="color:rgb(182, 23, 23);">games</mat-icon>
           VideoJuegos</button>
           <mat-menu #vjmenu="matMenu" [overlapTrigger]="false" >
