--- a/src/app/Gamestore/User/VideoJuegosHome/Card-Videojuego/detalle-juego.component.html
+++ b/src/app/Gamestore/User/VideoJuegosHome/Card-Videojuego/detalle-juego.component.html
@@ -13,7 +13,7 @@
     <img mat-card-image class="portada" src="../../../../../../assets/PortadasVj/{{x.img}}" alt="Photo of a Shiba Inu">
     <mat-card-content class="texto-card">
       <p>
-        {{x.descripcion}}
+       Descripcion: {{x.descripcion}}
       </p>
       <p>Plataformas: {{plataformas}}</p>
       <p>Genero: {{genero}}</p>
