--- a/src/app/Gamestore/User/modal_juego/detalle-compra/detalle-compra.component.css
+++ b/src/app/Gamestore/User/modal_juego/detalle-compra/detalle-compra.component.css
@@ -3,12 +3,12 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    background-color: rgba(76, 79, 79, 0.718)
+    background-color: rgba(51, 45, 145, 0.718)
     
     
   }
   .btn{
-    background-color: aliceblue;
+    background-color: rgb(255, 255, 255);
   }
   
   .mat-table {
@@ -35,7 +35,7 @@ width: 100%;
 
 .mdc-data-table__table {
   /* Estilos personalizados aquí */
-  background-color: #f2f2f2;
+  background-color: #ffffff;
   border: 3px solid black;
   white-space: nowrap;
   min-width: 95%;
