--- a/src/app/Gamestore/User/video-consolas-home/detalle-videconsola/detalle-videconsola.component.css
+++ b/src/app/Gamestore/User/video-consolas-home/detalle-videconsola/detalle-videconsola.component.css
@@ -1,59 +1,38 @@
 .body{
-    display: flex;
-    flex-direction: column;
+   display: flex;
+   flex-direction: column;
+   width: 100%;
+   height: 100%;
+   overflow: hidden;
+   background-color:rgb(255, 255, 255) ;
+    
+ 
+ 
+ }
+
+ .example-card {
     width: 100%;
     height: 100%;
-    
- 
- 
- }
- 
- .figure{
     display: flex;
-    height: 90%;
-    flex-direction: row;
-    
+    align-items: center;
+    background-color:rgb(252, 252, 252) ;
+   
+  }
+
+  .example-header-image {
+    background-size: cover;
+   }
  
- }
+   .portada{
+    border-radius: 2px;
+    width: 60%;
+    height: 50%;
+  }
  
  
- .portada{
-     width: 95%;
-     height: 95%;
- }
  
- .card{
-     height: 100%;
-     width: 60%;
-     display: flex;
-     flex-direction: row;
-     justify-content: center;
-     
-     margin-left: 1%;
-     margin-top: 1%;
-      
- }
  
- .figura{
-     justify-content: center;
-     height: 100%;
-     width: 100%; 
- }
- .descripcion{
- margin-left: 2%;
- margin-right: 2%;
- max-width: 50%;
- word-break:break-all;
  
- }
  
- .buttons{
-     margin-top: 12%;
-     float: left;
-     width: 100%;
- }
+
  
- .btn-buy{
-     
-     margin-left: 2%;
- }
