--- a/src/app/Gamestore/User/modal_juego/detalle-compra/detalle-compra.component.css
+++ b/src/app/Gamestore/User/modal_juego/detalle-compra/detalle-compra.component.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     width: 100%;
     height: 100%;
-    background-color: rgba(51, 45, 145, 0.718)
+    background-color: var(--temaPrincipal)
     
     
   }
