--- a/src/app/Gamestore/User/modal_juego/form-compra/form-compra.component.css
+++ b/src/app/Gamestore/User/modal_juego/form-compra/form-compra.component.css
@@ -1,35 +1,46 @@
 .body{
     display: flex;
-    height: 100%;
+   
     width: 100%;
     flex-direction: column;
     align-items: center;
-    background-color: rgba(76, 79, 79, 0.718);
+    background-color: var(--temaPrincipal)
     
 }
-div p{
-  
-}
+
 .titulo{
-    display: flex;
-    flex-direction: row;
-    width: 95%;
+    width: 90%;
+    border: solid black 1px;
+    justify-content: center;
 }
 
 .span_timer{
   float: right; 
-  margin-top: 18px;
-  margin-left: 45%;
+  margin-right: 5%;
+  margin-top: 10px;
+  color: white;
+  
+}
+h3{
+  float: left; 
+  margin-top: 10px;
+  color: white;
 }
 
 .form{
-    width: 100%;
+    width: 85%;
+    border: black 1px solid;
+    background-color: rgb(255, 255, 255);
+    border-radius: 20px;
 }
 .card{
 
-  width: 100%;
+  width: 100%;  
+  background-color: inherit;
   display: flex;
   flex-direction: column;
+ 
+  border: transparent;
   align-items: center;
 }
 .card-body{
@@ -40,31 +51,23 @@ div p{
     width: 90%;
 }
 
-.dos{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-  margin-top: 20px;
-  height: 50%;
-  margin-bottom: 2%;
-  position: sticky;
-  bottom: 0;
-  background-color: lightsteelblue;
-  padding-top: 2%;
-  padding-bottom: 2%;
-
+.botones{
+  border: black 1px solid;
+  margin-bottom: 5%;
+  margin-top: 5%;
 }
 
 .btn-danger{
     float: right;
-    align-items: flex-end;
-    background-color:none;
+    margin-right: 30px; 
     border: none;
+    margin-bottom: 2%;
+    margin-top: 2%;
 }
 .btn-success{
   float: left;
   margin-left: 30px; 
-  
   border: none;
+  margin-bottom: 2%;
+  margin-top: 2%;
 }
