--- a/src/app/Gamestore/User/index-user/index-user.component.html
+++ b/src/app/Gamestore/User/index-user/index-user.component.html
@@ -42,7 +42,7 @@
           <button mat-button class="btn-buy" title="carrito" (click)="DetalleCarritoModal()" >
             <mat-icon style="color: rgb(0, 0, 0);margin-right: 0.5%;">shopping_cart</mat-icon>
          </button>
-         <p style="margin-top: 1%;">{{acumulador| number: '1.2-2'}}</p>
+         <p style="margin-top: 1%;">{{acumulador| euros}}</p>
 
          <button mat-button class="btn-buy" title="carrito" (click)="pagar()" >
           <mat-icon style="color: rgb(0, 0, 0);margin-right: 0.5%;">shopping_cart</mat-icon>
