--- a/src/app/Gamestore/User/modal_juego/form-compra/form-compra.component.html
+++ b/src/app/Gamestore/User/modal_juego/form-compra/form-compra.component.html
@@ -54,10 +54,10 @@
 </div>
   <div class="botones" >
     
-    <button mat-button class="btn-danger" (click)="close()"  >
+    <button mat-button class="btn-danger" (click)="close()" title="Cerrar"  >
         <mat-icon>exit_to_app</mat-icon>
     </button>
-    <button mat-button class="btn-success" (click)="pagar()"  >
+    <button mat-button class="btn-success" (click)="pagar()" title="Pagar"  >
         <mat-icon>done</mat-icon>
     </button>
     
