--- a/src/app/Gamestore/User/index-user/index-user.component.css
+++ b/src/app/Gamestore/User/index-user/index-user.component.css
@@ -15,7 +15,7 @@
 .example-toolbar{
   width: 100%;
   max-width: 100%;
-  background-color: rgb(111, 51, 151);
+  background-color: var(--temaPrincipal)
 }
 
 .mat-sidenav-container{
@@ -37,7 +37,7 @@
 }
 
 .MenuExpansible{
-  background-color: rgb(21, 179, 92);
+  background-color:var(--sidenavColor);
 
   display: flex;
   flex-direction: row;
