--- a/src/app/Gamestore/User/modal_juego/detalle-compra/detalle-compra.component.html
+++ b/src/app/Gamestore/User/modal_juego/detalle-compra/detalle-compra.component.html
@@ -39,7 +39,7 @@
       <!-- Symbol Column -->
       <ng-container matColumnDef="portada">
         <mat-header-cell *matHeaderCellDef > Imagen </mat-header-cell>
-        <mat-cell *matCellDef="let pv" ><img class="portada" src="../../../../../assets/PortadasVj/{{pv.img}}">  </mat-cell>
+        <mat-cell *matCellDef="let pv" ><img class="portada"  src={{getimagen(pv.img)}}>  </mat-cell>
       </ng-container>
       
       <ng-container matColumnDef="options">
