--- a/src/app/Gamestore/Admin/crud-vj/crud-vj.component.css
+++ b/src/app/Gamestore/Admin/crud-vj/crud-vj.component.css
@@ -31,10 +31,10 @@
     max-width: 100%;
   }
 
-  .mdc-data-table__table {
+.mdc-data-table__table {
     /* Estilos personalizados aquí */
     background-color: #f2f2f2;
-    border: 1px solid #ccc;
+    border-bottom-color: 1px solid #000000;
     white-space: nowrap;
     min-width: 80%;
     margin-left: 1%;
@@ -42,9 +42,26 @@
     /* Otros estilos que desees aplicar */
   }
 
+/* Esta clase indica a las cabeceras de la tabla */
 .mdc-data-table__header-cell{
     padding: 0,0,0,0;
+    border-bottom:1px black solid;
 }
+
+.mdc-data-table__table[_ngcontent-ng-c3315818091] {
+  white-space: normal
+} 
+/* Esta clase indica a las celdas de la tabla */
+.mdc-data-table__cell{
+  padding: 0 0 0 0;
+  border-bottom:1px black solid;
+  height: auto;
+ 
+}
+.mdc-data-table__row {
+  height: 30%;
+}
+
 
 .btn{
   width: 10%;
@@ -67,12 +84,8 @@
 } 
 
 .imgTabla{
-  width: 60%;
-  height: 80%;
+  width: 45%;
+  height: 110px;
 }
-.mdc-data-table__cell, .mdc-data-table__header-cell {
-  padding: 0 0 0 0;
-}
-.mdc-data-table__table[_ngcontent-ng-c3315818091] {
-  white-space: normal
-}
+
+
