--- a/src/app/Gamestore/User/index-user/index-user.component.html
+++ b/src/app/Gamestore/User/index-user/index-user.component.html
@@ -12,7 +12,7 @@
          <span>Inicio</span>
          </button>
          
-        <button mat-button class="MenuButton" >
+        <button mat-button class="MenuButton"  routerLink="" (click)="cuenta()" >
           <mat-icon style="color:rgb(252, 232, 179);">perm_identity</mat-icon>
           <span>Cuenta</span>
         </button>
@@ -44,9 +44,7 @@
          </button>
          <p style="margin-top: 1%;">{{acumulador| euros}}</p>
 
-         <button mat-button class="btn-buy" title="carrito" (click)="pagar()" >
-          <mat-icon style="color: rgb(0, 0, 0);margin-right: 0.5%;">shopping_cart</mat-icon>
-       </button>
+         
           
           <img src="../../../../assets/logo_barra.jpg" class="img-logo" >
           <p class="example-spacer" >GameStore</p>
@@ -54,7 +52,7 @@
         </mat-toolbar>
 
           <!-- Div de los menu de botones -->
-        <div class="divbuttonmenu">
+        <div class="divbuttonmenu" *ngIf="boleancarrusel">
 
            <!-- DropDown de VideoJuegos -->
           <div class="btn-group" >
@@ -143,7 +141,7 @@
            
 
            <!-- DropDown de Moviles -->
-          <div class="btn-group" >
+          <div class="btn-group"  >
             <button mat-button data-toggle="dropdown" class="btn btn-default dropdown-toggle"
             style="border: 1px black solid;margin-left: 1%;" >
             <i class="bi bi-phone-fill" style="color:rgb(144, 39, 39);" ></i>
@@ -170,7 +168,7 @@
 
 
           <!-- Div del carrusel de imagenes -->
-        <div  class="divCarrusel" >
+        <div  class="divCarrusel" *ngIf="boleancarrusel" >
           <ngb-carousel [interval]="1500" [animation]="true">
 
             <ng-template ngbSlide>
