--- a/src/app/Gamestore/User/video-consolas-home/detalle-videconsola/detalle-videconsola.component.html
+++ b/src/app/Gamestore/User/video-consolas-home/detalle-videconsola/detalle-videconsola.component.html
@@ -9,7 +9,7 @@
         <mat-card-title>{{x.nombre}}</mat-card-title>
         <mat-card-subtitle>{{x.precio|euros}}</mat-card-subtitle>
     </mat-card-header>
-    <img mat-card-image class="portada" src="../../../../../assets/Consolas/{{x.img}}" alt="Photo of a Shiba Inu">
+    <img mat-card-image class="portada" src={{getimagen(x.img)}}  title="Imagen de Producto">
     <mat-card-content class="texto-card">
         <p>
          Descripcion: {{x.descripcion}}
@@ -20,13 +20,13 @@
       </mat-card-content>
 
       <mat-card-actions>
-            <button mat-button class="btn-buy" title="agregar" *ngIf="tipo!=2" (click)="cargar()">
+            <button mat-button class="btn-buy" title="agregar" *ngIf="tipo!=2" (click)="cargar()" title="Cargar Carrito">
                 <mat-icon style="color: black;">shopping_cart</mat-icon>
             </button> 
-            <button mat-button class="btn-buy" title="eliminar" *ngIf="tipo==1"  (click)="quitar(x)">
+            <button mat-button class="btn-buy" title="eliminar" *ngIf="tipo==1"  (click)="quitar(x)" title="Eliminar Carrito">
                 <mat-icon style="color: black;">remove_shopping_cart</mat-icon>
             </button> 
-            <button mat-button class=" btn-buy" (click)="cerrar()" style="float: right;" >
+            <button mat-button class=" btn-buy" (click)="cerrar()" style="float: right;" title="Cerrar" >
                 <mat-icon>exit_to_app</mat-icon>
             </button>
     </mat-card-actions>
